--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,3 +1,9 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
 
+## Logging Configuration
+logging.level.org.springframework.web=TRACE
+#logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+#logging.level.com.stex.core.api=INFO
+#logging.level.com.stex.core.api.cafe=TRACE
+#logging.level.com.stex.core.api.medic=TRACE
+#logging.level.com.stex.core.api.tools=TRACE
+#logging.level.root=DEBUG
