--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
 		<module>cafe</module>
 		<module>medic</module>
 		<module>tools</module>
-		<module>app</module>
-	</modules>
+        <module>webapp</module>
+    </modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -25,7 +25,7 @@
 		<fasterxml.core.version>2.9.6</fasterxml.core.version>
 		<fasterxml.data-binding.version>2.9.8</fasterxml.data-binding.version>
 		<jwt.version>0.9.0</jwt.version>
-		<spring.boot.version>2.1.3.RELEASE</spring.boot.version>
+		<spring.boot.version>2.0.4.RELEASE</spring.boot.version>
 		<slf4j.version>1.7.25</slf4j.version>
 	</properties>
 
@@ -40,6 +40,12 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-web</artifactId>
+				<version>${spring.boot.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-hateoas</artifactId>
 				<version>${spring.boot.version}</version>
 			</dependency>
 
@@ -102,6 +108,15 @@
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
 					<version>${spring.boot.version}</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
