--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=cafe
 
+logging.level.com.stex.core.api.webapp=DEBUG
