--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<fasterxml.data-binding.version>2.9.8</fasterxml.data-binding.version>
 		<jwt.version>0.9.0</jwt.version>
 		<spring.boot.version>2.0.4.RELEASE</spring.boot.version>
+		<mongodb.version>2.1.4.RELEASE</mongodb.version>
 		<slf4j.version>1.7.25</slf4j.version>
 	</properties>
 
