--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
 				<version>${fasterxml.data-binding.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				<version>2.23.4</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
