--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>log4j-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+        </dependency>
         <!--<dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
