--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,34 @@
 						<target>${java.version}</target>
 					</configuration>
 				</plugin>
+
+				<plugin>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>2.6</version>
+				</plugin>
+				<!--<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-shade-plugin</artifactId>
+					<version>3.2.1</version>
+					<executions>
+						<execution>
+							<id>create-fat-jar</id>
+							<phase>package</phase>
+							<goals>
+								<goal>shade</goal>
+							</goals>
+							<configuration>
+								<transformers>
+									&lt;!&ndash; add Main-Class to manifest file &ndash;&gt;
+									<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+										<mainClass>com.stex.core.api.webapp.Application</mainClass>
+									</transformer>
+								</transformers>
+								<finalName>backend</finalName>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>-->
 			</plugins>
 		</pluginManagement>
 	</build>
