--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=cafe
+spring.data.mongodb.database=backend
 
 logging.level.com.stex.core.api.webapp=DEBUG
